# diffcog

./: .autosnap.toml  .gitignore  AGENTS.md  BRAINSTORMING.md  CLI.md  README.md  pyproject.toml
docs/: SCORING.md
src/diffcog/: __init__.py  analysis.py  check.py  cli.py  debug_analysis.py  diff_input.py  errors.py  git.py  history.py  models.py  report.py  selection.py
src/diffcog/languages/: __init__.py  base.py  registry.py
src/diffcog/languages/go/: __init__.py  complexity.py  metrics.py  parser.py  resolver.py
src/diffcog/languages/java/: __init__.py  complexity.py  metrics.py  models.py  parser.py  resolver.py  selection.py
src/diffcog/languages/python/: __init__.py  complexity.py  metrics.py  parser.py  resolver.py
tests/: test_ck_metrics.py  test_cli.py  test_diff_input.py  test_git_comparisons.py  test_go_analysis.py  test_go_complexity.py  test_go_parser.py  test_history_metrics.py  test_java_complexity.py  test_java_parser.py  test_language_cli_integration.py  test_python_analysis.py  test_python_complexity.py  test_python_parser.py  test_report.py  test_selection.py
