[project]
name = "diff-complexity"
version = "0.1.0"
description = "Measure cognitive complexity introduced by code changes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
diffcog = "diffcog.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffcog"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
